adds production section to role_map

--- a/config/role_map.yml
+++ b/config/role_map.yml
@@ -17,3 +17,7 @@ test:
   patron:
     - patron1@example.com
     - leland_himself@example.com
+production:
+  archivist:
+    - info@example.com 
+
