CSV importer. Story #127

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -93,6 +93,10 @@ Rails/Date:
 Rails/TimeZone:
   Enabled: false
 
+Rails/Output:
+  Exclude:
+    - 'lib/import/**/*'
+
 RSpec/AnyInstance:
   Enabled: false
 
