--- a/config/curation_concerns.yml.sample
+++ b/config/curation_concerns.yml.sample
@@ -1,9 +1,9 @@
 default: &default
   # derivatives_path contains thumbnails and web-friendly audio, and video files for playbock
-  derivatives_path: File.join(Rails.root, 'tmp', 'derivatives')
+  derivatives_path: <%= File.join(Rails.root, 'tmp', 'derivatives') %>
   # uploads_path stashes files uploaded via the browser before ingest to fedora
   # on distributed architectures, uploads_path must be on a drive shared with the web server
-  uploads_path: File.join(Rails.root, 'tmp', 'uploads')
+  uploads_path: <%= File.join(Rails.root, 'tmp', 'uploads') %>
   # minter_path tracks the ID of the last-created object
   minter_path: /tmp/minter-state
 
@@ -15,6 +15,6 @@ test:
 
 production:
   <<: *default
-  minter_path: File.join(Rails.root, 'minter-state')
+  minter_path: <%= File.join(Rails.root, 'minter-state') %>
   # we recommend derivatives_path and the minter_path to non-temporary locations
   # for production systems
