--- a/config/settings/test.yml
+++ b/config/settings/test.yml
@@ -1,4 +1,4 @@
-default: &default
+  # settings for curation concerns for the test environment, locally and on Travis:
   # derivatives_path contains thumbnails and web-friendly audio, and video files for playbock
   derivatives_path: <%= File.join(Rails.root, 'tmp', 'derivatives') %>
   # uploads_path stashes files uploaded via the browser before ingest to fedora
@@ -6,16 +6,3 @@ default: &default
   uploads_path: <%= File.join(Rails.root, 'tmp', 'uploads') %>
   # minter_path tracks the ID of the last-created object
   minter_path: <%= File.join(Rails.root, 'tmp', 'minter-state') %>
-
-development:
-  <<: *default
-
-test:
-  <<: *default
-
-production:
-  <<: *default
-  # we recommend setting derivatives_path and the minter_path
-  # to persistent (non-temporary) locations for production systems
-  derivatives_path: <%= File.join(Rails.root, 'derivatives')
-  minter_path: <%= File.join(Rails.root, 'minter-state')
