File name with non-English characters. Story #152

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,7 @@ AllCops:
     - 'spec/internal/**/*'
     - 'spec/test_app_templates/**/*'
     - 'vendor/**/*'
+    - 'tmp/**/*'
 
 Lint/ImplicitStringConcatenation:
   Exclude:
