added clamav to production

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: ruby
 cache: bundler
-sudo: false
+sudo: required
 
+before_install:
+  - sudo apt-get install -qq clamav-daemon libclamav-dev clamav-data
+  - sudo freshclam -v
 before_script:
   - bundle exec bin/setup
 rvm:
