--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -6,3 +6,4 @@
   uploads_path: <%= File.join(Rails.root, 'tmp', 'uploads') %>
   # minter_path tracks the ID of the last-created object
   minter_path: <%= File.join(Rails.root, 'tmp', 'minter-state') %>
+  resque_namespace: heliotrope-development
