--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -2,3 +2,11 @@
 Metrics/ClassLength:
   Exclude:
     - 'app/controllers/catalog_controller.rb'
+
+Metrics/CyclomaticComplexity:
+  Exclude:
+    - 'app/models/riiif/file.rb'
+
+Metrics/PerceivedComplexity:
+  Exclude:
+    - 'app/models/riiif/file.rb'
