add X-Sendfile header for videos, #401

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -10,3 +10,4 @@ Metrics/CyclomaticComplexity:
 Metrics/PerceivedComplexity:
   Exclude:
     - 'app/models/riiif/file.rb'
+    - 'app/controllers/downloads_controller.rb'
