manage jekyll deployment via cap and heliotrope-deploy project

--- a/config/jekyll.yml
+++ b/config/jekyll.yml
@@ -16,7 +16,7 @@ github_username:  mlibrary/heliotrope
 # Handling reading
 encoding: "utf-8"
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
-keep_files: ["/assets"]
+keep_files: ["/assets", "/system", "/uploads"]
 
 # Conversion
 markdown: kramdown
