modify permalink structure for jekyll blog posts - do not use extensionless permalinks

--- a/config/jekyll.yml
+++ b/config/jekyll.yml
@@ -25,4 +25,4 @@ markdown: kramdown
 baseurl: "" # the subpath of your site, e.g. /blog
 
 # Outputting
-permalink: /blog/:year/:month/:day/:title
+permalink: /blog/:year/:month/:day/:title/
