Fixes #479 - Added new hdl (handle) and doi predicates for file_sets
Also removed file_set.identifier that conflicts with monograph.identifier predicate

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -27,6 +27,11 @@ Metrics/AbcSize:
 Metrics/MethodLength:
   Enabled: false
 
+Metrics/ClassLength:
+  Description: 'Avoid classes longer than 250 lines of code'
+  Enabled: true
+  Max: 250
+
 Performance/RedundantMerge:
   Enabled: false
 
