Resolves #560: Add google analytics pageviews to monographs
Monograph pageviews include views of the monograph, any of the
monograph's file_sets and any searches of file_sets.

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,10 @@
 /config/secrets.yml
 /config/database.yml
 /config/analytics.yml
+/config/analytics.yml.dev
 /config/curation_concerns.yml
+# Google Analytics access keys
+*.p12
 
 # Ignore Vagrant support files
 .vagrant
@@ -47,4 +50,3 @@
 
 # Ingnore import directory
 import/
-
