Resolves #730: Embed code for video

--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -7,3 +7,4 @@
   # minter_path tracks the ID of the last-created object
   minter_path: <%= File.join(Rails.root, 'tmp', 'minter-state') %>
   resque_namespace: heliotrope-development
+  host: localhost:3000
