Prefer ~/tmp over /tmp and fixes file upload "No such file" errors
Resolves #627

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -7,11 +7,13 @@ Metrics/CyclomaticComplexity:
   Exclude:
     - 'app/models/riiif/file.rb'
     - 'app/controllers/downloads_controller.rb'
+    - 'app/controllers/curation_concerns/file_sets_controller.rb'
 
 Metrics/PerceivedComplexity:
   Exclude:
     - 'app/models/riiif/file.rb'
     - 'app/controllers/downloads_controller.rb'
+    - 'app/controllers/curation_concerns/file_sets_controller.rb'
 
 Style/RedundantReturn:
   Exclude:
