--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@
 /config/analytics.yml
 /config/analytics.yml.dev
 /config/curation_concerns.yml
+/config/role_map.yml
 # Google Analytics access keys
 *.p12
 
