--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -1,25 +1,37 @@
-# SQLite version 3.x
-#   gem install sqlite3
+# MySQL version 2.x
 #
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
+#   gem install mysql2
+#
+# 	Ensure the MySQL 2 gem is defined in your Gemfile
+# 	gem 'mysql2'
+#
+# Use mysql2 as the database for Active Record
 #
 default: &default
-  adapter: sqlite3
+  adapter: mysql2
+  encoding: utf8
   pool: 5
-  timeout: 5000
+  #timeout: 5000
+  #username: root
+  #password:
+  #shost: localhost
+  #port: 3306
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: heliotrope_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: heliotrope_test
 
+# Warning: Do not set username and password in the file!
+# Assign username and password to environment variales.
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: heliotrope_production
+  username: <required>
+  password:	<required>
