--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,17 @@ AllCops:
     - 'vendor/**/*'
     - 'tmp/**/*'
 
+Layout/BlockEndNewline:
+  Exclude:
+    - 'spec/**/*'
+
+Layout/IndentationConsistency:
+  EnforcedStyle: rails
+
+Layout/MultilineBlockLayout:
+  Exclude:
+    - 'spec/**/*'
+
 Lint/ImplicitStringConcatenation:
   Exclude:
     - 'lib/generators/sufia/**/*'
@@ -45,21 +56,10 @@ Style/BlockDelimiters:
   Exclude:
     - 'spec/**/*'
 
-Style/BlockEndNewline:
-  Exclude:
-    - 'spec/**/*'
-
 Style/FileName:
   Exclude:
     - 'Gemfile'
     - 'Vagrantfile'
-
-Style/MultilineBlockLayout:
-  Exclude:
-    - 'spec/**/*'
-
-Style/IndentationConsistency:
-  EnforcedStyle: rails
 
 Style/CollectionMethods:
   PreferredMethods:
