--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 cache: bundler
 sudo: required
-
+bundler_args: --without production
 before_script:
   - bundle exec bin/setup
 rvm:
