--- a/ruumba/.ruumba.yml
+++ b/ruumba/.ruumba.yml
@@ -1,3 +1,7 @@
+AllCops:
+  TargetRubyVersion:
+    2.3.1
+
 Layout/AlignHash:
   Enabled: false
 Layout/AlignParameters:
@@ -49,6 +53,8 @@ Style/AndOr:
 Style/ConditionalAssignment:
   Enabled: false
 Style/EmptyElse:
+  Enabled: false
+Style/FrozenStringLiteralComment:
   Enabled: false
 Style/HashSyntax:
   Enabled: false
