--- a/config/settings/test.yml
+++ b/config/settings/test.yml
@@ -1,6 +1,6 @@
   # settings for curation concerns for the test environment, locally and on Travis:
   # derivatives_path contains thumbnails and web-friendly audio, and video files for playbock
-  derivatives_path: <%= File.join(Rails.root, 'tmp', 'derivatives') %>
+  derivatives_path: <%= File.join(Rails.root, 'tmp', 'rspec_derivatives') %>
   # uploads_path stashes files uploaded via the browser before ingest to fedora
   # on distributed architectures, uploads_path must be on a drive shared with the web server
   uploads_path: <%= File.join(Rails.root, 'tmp', 'uploads') %>
