Refactor of views/monograph_catalog/index to use i18n.t.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -30,6 +30,10 @@ Lint/ImplicitStringConcatenation:
   Exclude:
     - 'lib/generators/sufia/**/*'
 
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*'
+
 Metrics/LineLength:
   Enabled: false
 
