--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ sudo: required
 bundler_args: --without production
 before_install:
   - gem update --system
-  - gem install bundler
+  - gem install bundler --pre
 before_script:
-  - bin/bundle exec bin/setup
+  - bin/bundle exec bin/travis
 rvm:
   - 2.3.1
 jdk:
