Ignore Redis snapshots

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@
 
 .byebug_history
 
+# Ignore Redis snapshots
+dump.rdb
+
 ##############################################################################
 #
 # Heliotrope
