Fix #1576 - Add a config setting for whether users should be created on login
- Add `create_user_on_login` setting to Rails configuration
- Set development mode default to true, otherwise false
- Simplify http_header_authenticatable structure

--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -11,3 +11,6 @@ host: localhost:3000
 # cosign_logout_url: "https://weblogin.umich.edu/cgi-bin/logout?"
 cosign_logout_url: ""
 
+# Should we create users automatically on first login?
+# This supports convenient single sign-on account provisioning
+create_user_on_login: true
