Resolves #1591: Display pop-up for Co-Sign users

--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -13,4 +13,4 @@ cosign_logout_url: ""
 
 # Should we create users automatically on first login?
 # This supports convenient single sign-on account provisioning
-create_user_on_login: true
+create_user_on_login: false
