Resolves #1625: Install new Authentication System (Keycard)

--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -14,3 +14,10 @@ cosign_logout_url: ""
 # Should we create users automatically on first login?
 # This supports convenient single sign-on account provisioning
 create_user_on_login: false
+
+keycard:
+  database:
+    adapter: sqlite
+    database: db/keycard-development.sqlite3
+    pool: 5
+    timeout: 5000
