--- a/config/settings/test.yml
+++ b/config/settings/test.yml
@@ -10,3 +10,14 @@ resque_namespace: heliotrope-testing
 host: test.host
 # cosign_logout_url: "https://weblogin.umich.edu/cgi-bin/logout?"
 cosign_logout_url: ""
+
+# Should we create users automatically on first login?
+# This supports convenient single sign-on account provisioning
+create_user_on_login: false
+
+keycard:
+  database:
+    adapter: sqlite
+    database: db/keycard-test.sqlite3
+    pool: 5
+    timeout: 5000
