Resolves 1480 Test HEB Admin role

--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -21,3 +21,10 @@ keycard:
     database: db/keycard-development.sqlite3
     pool: 5
     timeout: 5000
+
+checkpoint:
+  database:
+    adapter: sqlite
+    database: db/checkpoint-development.sqlite3
+    pool: 5
+    timeout: 5000
