Resolves HELIO-1877 Institutional's Shibboleth EntityId And Embedded Directory Service

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,7 @@ AllCops:
     - '**/config.ru'
   Exclude:
     - 'db/**/*'
+    - 'public/**/*'
     - 'ruumba/**/*'
     - 'script/**/*'
     - 'spec/internal/**/*'
