--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -10,6 +10,8 @@ resque_namespace: heliotrope-development
 host: localhost:3000
 # cosign_logout_url: "https://weblogin.umich.edu/cgi-bin/logout?"
 cosign_logout_url: ""
+# shibboleth_service_provider_url: "https://quod.lib.umich.edu/Shibboleth.sso"
+shibboleth_service_provider_url: "https://quod.lib.umich.edu/Shibboleth.sso"
 
 # Should we create users automatically on first login?
 # This supports convenient single sign-on account provisioning
