--- a/config/settings/test.yml
+++ b/config/settings/test.yml
@@ -10,6 +10,8 @@ resque_namespace: heliotrope-testing
 host: test.host
 # cosign_logout_url: "https://weblogin.umich.edu/cgi-bin/logout?"
 cosign_logout_url: ""
+# shibboleth_service_provider_url: "https://quod.lib.umich.edu/Shibboleth.sso"
+shibboleth_service_provider_url: ""
 
 # Should we create users automatically on first login?
 # This supports convenient single sign-on account provisioning
