--- a/config/jekyll.yml
+++ b/config/jekyll.yml
@@ -8,8 +8,8 @@ email: fulcrum-info@umich.edu
 description: > # this means to ignore newlines until "url:"
   Fulcrum is a publishing platform that helps publishers present the
   full richness of their authors' research outputs in a durable, discoverable,
-  and flexible form.
-url: "http://fulcrum.org" # the base hostname & protocol for your site
+  accessible, and flexible form.
+url: "https://fulcrum.org" # the base hostname & protocol for your site
 twitter_username: fulcrumpub
 github_username:  mlibrary/heliotrope
 
