--- a/config/authorities/licenses.yml
+++ b/config/authorities/licenses.yml
@@ -38,22 +38,22 @@ terms:
       active: false
     - id: https://creativecommons.org/licenses/by/3.0/
       term: Creative Commons Attribution license, 3.0 Unported # Heliotrope term
-      active: true
+      active: false
     - id: https://creativecommons.org/licenses/by-nd/3.0/
       term: Creative Commons Attribution-NoDerivatives license, 3.0 Unported # Heliotrope term
-      active: true
+      active: false
     - id: https://creativecommons.org/licenses/by-nc-nd/3.0/
       term: Creative Commons Attribution-NonCommercial-NoDerivatives license, 3.0 Unported # Heliotrope term
-      active: true
+      active: false
     - id: https://creativecommons.org/licenses/by-nc/3.0/
       term: Creative Commons Attribution-NonCommercial license, 3.0 Unported # Heliotrope term
-      active: true
+      active: false
     - id: https://creativecommons.org/licenses/by-nc-sa/3.0/
       term: Creative Commons Attribution-NonCommercial-ShareAlike license, 3.0 Unported # Heliotrope term
-      active: true
+      active: false
     - id: https://creativecommons.org/licenses/by-sa/3.0/
       term: Creative Commons Attribution-ShareAlike license, 3.0 Unported # Heliotrope term
-      active: true
+      active: false
     - id: https://creativecommons.org/licenses/by/4.0/
       # term: Creative Commons BY Attribution 4.0 International # Hyrax term
       term: Creative Commons Attribution 4.0 International license # Heliotrope term
