--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -10,7 +10,7 @@ resque_namespace: heliotrope-development
 host: localhost:3000
 
 # Toggle between legacy and checkpoint authorization for EPubs.
-e_pub_checkpoint_authorization: false
+e_pub_checkpoint_authorization: true
 
 keycard:
   database:
