Addresses HELIO-2226 Publisher Specific Favicon.

--- a/ruumba/.ruumba.yml
+++ b/ruumba/.ruumba.yml
@@ -37,6 +37,8 @@ Style/TernaryParentheses:
 #
 # begin TODO: cops that need to be reevaluated
 
+Layout/AlignArray:
+  Enabled: false
 Layout/BlockAlignment:
   Enabled: false
 Layout/ClosingParenthesisIndentation:
