HELIO-2382 epub share link logic changes   Log share link creation and use (including ip addr and instituion if possible   A user coming to the ereader from a share link:     a) does not see the download button     b) does not see the scholarly sharing link button

--- a/config/settings/test.yml
+++ b/config/settings/test.yml
@@ -9,6 +9,8 @@ minter_path: <%= File.join(Rails.root, 'tmp', 'minter-state') %>
 resque_namespace: heliotrope-testing
 host: test.host
 
+e_pub_checkpoint_authorization: true
+
 keycard:
   database:
     adapter: sqlite
