Resolves HELIO-29: isbn solr spec

--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,10 @@
 /db/*.sqlite3-journal
 
 # Ignore all logfiles and tempfiles.
-/log/*
-/tmp/*
-!/log/.keep
-!/tmp/.keep
+**/log/*
+**/tmp/*
+!**/log/.keep
+!**/tmp/.keep
 
 /node_modules
 /yarn-error.log
