--- a/config/settings/test.yml
+++ b/config/settings/test.yml
@@ -6,6 +6,8 @@ derivatives_path: <%= File.join(Rails.root, 'tmp', 'rspec_derivatives') %>
 uploads_path: <%= File.join(Rails.root, 'tmp', 'uploads') %>
 # minter_path tracks the ID of the last-created object
 minter_path: <%= File.join(Rails.root, 'tmp', 'minter-state') %>
+# aptrust_bags_path is the directory in which bags for aptrust will be created
+aptrust_bags_path: <%= File.join(Rails.root, 'tmp', 'aptrust-bags') %>
 resque_namespace: heliotrope-testing
 host: test.host
 
