--- a/config/authorities/licenses.yml
+++ b/config/authorities/licenses.yml
@@ -38,7 +38,10 @@ terms:
       active: false
     - id: https://creativecommons.org/licenses/by/2.0/
       term: Creative Commons Attribution 2.0 Generic license # Heliotrope term
-      active: true
+      active: false
+    - id: https://creativecommons.org/licenses/by-sa/2.1/jp/
+      term: Creative Commons Attribution-ShareAlike 2.1 Japan # Heliotrope term
+      active: false
     - id: https://creativecommons.org/licenses/by/3.0/
       term: Creative Commons Attribution license, 3.0 Unported # Heliotrope term
       active: false
