export metadata from Solr

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -16,6 +16,7 @@ Metrics/ClassLength:
   Exclude:
     - 'app/controllers/catalog_controller.rb'
     - 'app/presenters/hyrax/file_set_presenter.rb'
+    - 'lib/export/exporter.rb'
 
 Metrics/CyclomaticComplexity:
   Exclude:
