--- a/config/role_map.yml.sample
+++ b/config/role_map.yml.sample
@@ -1,3 +1,9 @@
+devproque:
+  admin:
+  - admin@fulcrum.org
+  archivist:
+  - archivist1@example.com
+
 development:
   admin:
     - admin@fulcrum.org
