--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -17,6 +17,10 @@ default: &default
   #shost: localhost
   #port: 3306
 
+devproque:
+  <<: *default
+  database: heliotrope_development
+
 development:
   <<: *default
   database: heliotrope_development
