HELIO-2653 Add a service to submit crossref xml

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ dump.rdb
 /config/role_map.yml
 /config/skylight.yml
 /config/aptrust.yml
+/config/crossref.yml
 
 # Configuration file for automated systems tests.
 /testing/testing.yml
