HELIO-2656 Poll Crossref submission queue for DOI registration statuses

--- a/config/crossref.yml.sample
+++ b/config/crossref.yml.sample
@@ -1,4 +1,5 @@
 crossref:
   deposit_url: https://test.crossref.org/servlet/deposit
+  check_url:  https://test.crossref.org/servlet/submissionDownload
   login_id: id
   login_passwd: passwd
