title handling improvements
- CGI escape for URLs, i.e. hashtags
- break huge CSB share link widget template value into methods
- tests for title-based (and other) social media share links
- more title-base links allow Markdown/HTML emphasis, e.g.
  breadcrumbs, file_set links on catalog page
- fix regression where Markdown syntax is showing
- remove HTML from page title for EPUB reader
- improve test coverage around breadcrumbs and...
  Markdown in titles

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -39,12 +39,14 @@ Naming/HeredocDelimiterCase:
 Naming/HeredocDelimiterNaming:
   Exclude:
     - 'app/presenters/concerns/embed_code_presenter.rb'
+    - 'app/presenters/concerns/social_share_widget_presenter.rb'
     - 'lib/spec/e_pub/bridge_to_webgl_spec.rb'
     - 'lib/spec/e_pub/cfi_spec.rb'
     - 'lib/spec/e_pub/chapter_spec.rb'
     - 'lib/spec/e_pub/chapter_presenter_spec.rb'
     - 'lib/spec/e_pub/snippet_spec.rb'
     - 'spec/presenters/concerns/embed_code_presenter_spec.rb'
+    - 'spec/presenters/concerns/social_share_widget_presenter_spec.rb'
 
 Naming/MemoizedInstanceVariableName:
   Exclude:
