Resolves HELIO-2709: EPUB TOC problem

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -89,6 +89,7 @@ RSpec/DescribeClass:
     - 'spec/features/**/*'
     - 'spec/routing/**/*'
     - 'spec/views/**/*'
+    - 'lib/spec/integrations/**/*'
     - 'testing/spec/**/*'
 
 RSpec/ExampleWording:
