HELIO-2740 Minted DOIs cannot be updated in the UI

--- a/config/crossref.yml.sample
+++ b/config/crossref.yml.sample
@@ -1,5 +1,6 @@
 crossref:
   deposit_url: https://test.crossref.org/servlet/deposit
   check_url:  https://test.crossref.org/servlet/submissionDownload
+  search_url: https://api.crossref.org/works
   login_id: id
   login_passwd: passwd
