--- a/config/jekyll.yml
+++ b/config/jekyll.yml
@@ -16,7 +16,9 @@ github_username:  mlibrary/heliotrope
 # Handling reading
 encoding: "utf-8"
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
-keep_files: ["assets", "system", "upload"]
+
+# Jekyll will delete everything under public for security reasons. We want to keep these symlinks into `shared/public/`
+keep_files: ["assets", "sitemaps", "system", "upload"]
 
 # Conversion
 markdown: kramdown
