Resolves HELIO-1829: Add Leaflet full-screen mode

--- a/db/publishers.yml
+++ b/db/publishers.yml
@@ -13,6 +13,7 @@
   name: 'Heliotrope Press'
   description: "Heliotrope Press"
   press_url: 'https://www.fulcrum.org'
+  google_analytics: 'UA-77847516-9'
 
 - subdomain: indiana
   production: true
