HELIO-2931 replace chromedriver-helper (deprecated) with webdrivers gem to fix system specs. Also: address https://github.com/travis-ci/travis-ci/issues/9361wq

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ rvm:
 jdk:
   - oraclejdk8
 addons:
+  apt:
+    packages:
+      - dpkg # fix for travis issue https://github.com/travis-ci/travis-ci/issues/9361
   chrome: stable
 env:
   global:
