--- a/ruumba/.ruumba.yml
+++ b/ruumba/.ruumba.yml
@@ -9,6 +9,8 @@ AllCops:
 #
 # Inapplicable Cops
 
+Layout/AlignArguments:
+  Enabled: false
 Layout/AlignArray:
   Enabled: false
 Layout/AlignHash:
@@ -23,11 +25,13 @@ Layout/ClosingParenthesisIndentation:
   Enabled: false
 Layout/ElseAlignment:
   Enabled: false
+Layout/EmptyLineAfterGuardClause:
+  Enabled: false
 Layout/EndAlignment:
   Enabled: false
 Layout/ExtraSpacing:
   Enabled: false
-Layout/FirstParameterIndentation:
+Layout/IndentFirstArgument:
   Enabled: false
 Layout/IndentationConsistency:
   Enabled: false
@@ -53,6 +57,10 @@ Metrics/BlockLength:
   Enabled: false
 Metrics/LineLength:
   Enabled: false
+
+Naming/FileName:
+  Exclude:
+    - 'app/views/layouts/mozilla-pdf-viewer.html.erb.rb'
 
 Style/FrozenStringLiteralComment:
   Enabled: false
