--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -1,12 +1,34 @@
 # Put any overides here
-Lint/AmbiguousBlockAssociation:
-  Exclude:
-    - 'spec/controllers/hyrax/monographs_controller_spec.rb'
-    - 'spec/controllers/roles_controller_spec.rb'
+
+Layout/AlignHash:
+  Enabled: false
+
+Layout/ElseAlignment:
+  Enabled: false
+
+Layout/EmptyLineAfterGuardClause:
+  Enabled: false
+
+Layout/EmptyLinesAroundAccessModifier:
+  Enabled: false
 
 Layout/EmptyLinesAroundBlockBody:
   Exclude:
     - 'config/initializers/mailboxer.rb'
+
+Layout/EndAlignment:
+  Enabled: false
+
+Layout/IndentationWidth:
+  Enabled: false
+
+Layout/SpaceInsideBlockBraces:
+  Enabled: false
+
+Lint/AmbiguousBlockAssociation:
+  Exclude:
+    - 'spec/controllers/hyrax/monographs_controller_spec.rb'
+    - 'spec/controllers/roles_controller_spec.rb'
 
 Metrics/BlockLength:
   Enabled: true
@@ -71,6 +93,9 @@ Rails/HasManyOrHasOneDependent:
     - 'app/models/press.rb'
     - 'app/models/product.rb'
 
+Rails/HelperInstanceVariable:
+  Enabled: false
+
 Rails/InverseOf:
   Exclude:
     - 'app/models/press.rb'
@@ -90,6 +115,9 @@ Rails/SkipsModelValidations:
   Exclude:
     - 'spec/jobs/characterize_job_spec.rb'
 
+RSpec/DescribedClass:
+  Enabled: false
+
 RSpec/EmptyExampleGroup:
   Exclude:
     - 'spec/actors/hyrax/monograph_actor_spec.rb'
@@ -97,6 +125,9 @@ RSpec/EmptyExampleGroup:
 RSpec/ExampleLength:
   Enabled: true
   Max: 103 # default is 5
+
+RSpec/ImplicitSubject:
+  Enabled: false
 
 RSpec/LetSetup:
   Exclude:
@@ -145,6 +176,9 @@ RSpec/SubjectStub:
   Exclude:
     - 'spec/models/riiif/file_spec.rb'
 
+Style/CollectionMethods:
+  Enabled: false
+
 Style/CommentedKeyword:
   Exclude:
     - 'spec/controllers/hyrax/monographs_controller_spec.rb'
@@ -189,9 +223,11 @@ Style/GuardClause:
   Exclude:
     - 'lib/import/importer.rb'
 
-Style/InverseMethods:
-  Exclude:
-    - 'app/models/monograph_search_builder.rb' # line 32 is failing *locally*  for me but not on travis??? IDK why... same cop versions???
+Style/HashSyntax:
+  Enabled: false
+
+Style/IfUnlessModifier:
+  Enabled: false
 
 Style/NumericLiterals:
   Exclude:
