Royalty usage and calculation reports
HELIO-2819, HELIO-3155

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ dump.rdb
 /config/skylight.yml
 /config/aptrust.yml
 /config/crossref.yml
+/config/box.yml
 
 # Configuration file for automated systems tests.
 /testing/testing.yml
