Partial resolves HELIO-478 Use handle service to create handles on creation

--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -26,3 +26,9 @@ checkpoint:
     database: db/checkpoint-development.sqlite3
     pool: 5
     timeout: 5000
+
+handle_service:
+  instantiate: false
+  url: https://hdl.handle.net/api/handles
+  user: admin
+  password: secret
