--- a/config/settings/test.yml
+++ b/config/settings/test.yml
@@ -27,3 +27,8 @@ checkpoint:
     pool: 5
     timeout: 5000
 
+handle_service:
+  instantiate: false
+  url: https://hdl.handle.net/api/handles
+  user: admin
+  password: secret
