--- a/config/jekyll.yml
+++ b/config/jekyll.yml
@@ -18,7 +18,7 @@ encoding: "utf-8"
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 
 # Jekyll will delete everything under public for security reasons. We want to keep these symlinks into `shared/public/`
-keep_files: ["assets", "sitemaps", "system", "upload"]
+keep_files: ["assets", "sitemaps", "system", "upload", "DiscoFeed"]
 
 # Conversion
 markdown: kramdown
