Move/remove old duplicated curation_concerns layouts to hyrax
Bug fix where the score_presenter got out of sync with monographs/press_catalog expectations

The press_helper is only a factory for the press_presenter

Move banner logic to it's own banner_helper

HELIO-3311

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -72,6 +72,7 @@ Rails/HelperInstanceVariable:
   Exclude:
     - 'app/helpers/breadcrumbs_helper.rb'
     - 'app/helpers/press_helper.rb'
+    - 'app/helpers/banner_helper.rb'
 
 Rails/InverseOf:
   Exclude:
